# ApplicationServerODataPlugin

./: .gitmodules  ApplicationServerODataPlugin.Precompiled.h  ApplicationServerODataPlugin_global.h  CMakeLists.txt  ODataPlugin.cpp  ODataPlugin.h  ODataServiceDocument.h  ODataURLParser.h  odatawebhandler.cpp  odatawebhandler.h
tests/: CMakeLists.txt  tst_odataurlparsing.cpp
